<resources>
    <string name="app_name">MyPeloton</string>
    <string name="uname_hint">Enter an Email </string>
    <string name="pass_hint">Enter a Password </string>
    <string name="welcome_message">Welcome to MyPeloton </string>
    <string name="login_button">Login </string>
    <string name="register_button">Register </string>
    <string-array name="ride_types">
        <item>Road</item>
        <item>Cyclocross</item>
        <item>Touring</item>
        <item>Mountain</item>
        <item>Casual</item>
    </string-array>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>



</resources>